# mdbook-typst-doc

./: Cargo.toml  readme.md
.github/workflows/: deploy.yml  release.yml
example/: .gitignore  book.toml  data.typ  typst-doc.css
example/src/: SUMMARY.md  chapter_1.md  type_definition.md
example/src/f/: a.md
example/themes/typst-doc/: code.hbs  type.hbs
main/: 404.html  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json  type_definition.html  typst-doc.css
main/f/: a.html
src/: config.rs  lib.rs  main.rs
src/themes/: code.hbs  example.hbs  parameter.hbs  type.hbs
