[package]
name = "mdbook-typst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
mdbook = {version = "0.4.37", default-features = false }
pulldown-cmark = "0.10.0"
regex = "1.10.3"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
toml = "0.5.11"
