[package]
name = "mdbook-typst-doc"
edition = "2021"
version = "0.1.0"
authors = ["fenjalien"]

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
regex = "1.10.3"
toml = "0.5.11"

[dependencies.mdbook]
version = "0.4.37"
default-features = false

[dependencies.serde_json]
version = "1.0.114"
default-features = false
