[package]
name = "mdbook-typst-doc"
edition = "2021"
version = "0.1.0"
authors = ["fenjalien"]

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
fs_extra = "1.3.0"
handlebars = "5.1.0"
md5 = "0.7.0"
pulldown-cmark = "0.10.0"
regex = "1.10.3"
serde = {version = "1.0.197", features = ["derive"]}
toml = "0.5.11"
typst-syntax = "0.11"

[dependencies.mdbook]
version = "0.4.37"
default-features = false

[dependencies.serde_json]
version = "1.0.114"
default-features = false
